[tool.poetry]
name = "aiogram_nats_storage"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b5"
ormsgpack = "^1.2.3"
nats-py = "^2.2.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
black = "^22.10.0"
mypy = "^0.982"
pathvalidate = "^2.5.2"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 99
target-version = ['py38', 'py39', 'py310']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = [
    "aiofiles",
    "aiohttp",
    "aiohttp_socks",
    "aresponses",
    "packaging",
    "pkg_resources",
    "pydantic",
    "pytest"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
